# anyMic

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: android-ci.yml  build-macos.yml  build-windows.yml  server-ci.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/anymic/app/audio/: AudioCaptureTest.kt
android/app/src/androidTest/java/com/anymic/app/net/: HandshakeTest.kt  LoopbackEndToEndTest.kt  PacketLayoutTest.kt  RemoteConnectTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anymic/app/: AnyMicApplication.kt  MainActivity.kt  StreamingClient.kt
android/app/src/main/java/com/anymic/app/audio/: AudioCapture.kt  FrameRing.kt
android/app/src/main/java/com/anymic/app/model/: AppState.kt
android/app/src/main/java/com/anymic/app/net/: ControlChannel.kt  Discovery.kt  UdpSender.kt
android/app/src/main/java/com/anymic/app/service/: MicForegroundService.kt
android/app/src/main/java/com/anymic/app/ui/: AnyMicTheme.kt  AppNavigation.kt  DeviceListScreen.kt  HomeScreen.kt  MainViewModel.kt  StatsScreen.kt
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
android/opus-jni/: .gitignore  build.gradle.kts
android/opus-jni/src/androidTest/java/com/anymic/opus/: OpusNativeTest.kt
android/opus-jni/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
android/opus-jni/src/main/java/com/anymic/opus/: OpusNative.kt  Stub.kt
docs/: architecture.md  manual-e2e.md  protocol-v1.md
proto/: anymic.proto
server/: Cargo.toml
server/crates/anymic-audio-linux/: Cargo.toml
server/crates/anymic-audio-linux/src/: lib.rs
server/crates/anymic-audio-mac/: Cargo.toml
server/crates/anymic-audio-mac/examples/: sine_to_blackhole.rs
server/crates/anymic-audio-mac/src/: blackhole.rs  lib.rs
server/crates/anymic-audio-win/: Cargo.toml
server/crates/anymic-audio-win/src/: lib.rs
server/crates/anymic-core/: Cargo.toml
server/crates/anymic-core/examples/: announce_demo.rs
server/crates/anymic-core/src/: decoder.rs  discovery.rs  jitter.rs  lib.rs  packet.rs  sink.rs
server/crates/anymic-core/tests/: decoder_opus.rs  discovery_mdns.rs  jitter_buffer.proptest-regressions  jitter_buffer.rs  packet_codec.rs
server/crates/anymic-tauri/: Cargo.toml
server/crates/anymic-tauri/src/: lib.rs  server.rs  state.rs  stats.rs
server/src-tauri/: Cargo.toml  tauri.conf.json
server/src-tauri/capabilities/: default.json
server/src-tauri/icons/: icon.icns
server/src-tauri/src/: main.rs
server/ui/: index.html
tests/: .venv-setup.sh  conftest.py  requirements.txt
tests/fixtures/: README.md
tests/integration/: README.md  conftest.py  orchestrator.py  test_latency.py  test_pesq.py  test_spectrum.py
tests/tools/: __init__.py  analyze_spectrum.py  gen_chirp.py  gen_speech.py  gen_sweep.py  silence_detect.py  test_tools_self.py  xcorr_latency.py
tools/: send_opus_stream.py
