[package]
name = "anymic-app"
version = "0.1.0"
edition = "2021"
description = "anyMic desktop server application"
license = "MIT"

[[bin]]
name = "anymic-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
