[package]
name = "anymic-app"
version = "0.1.0"
edition = "2021"
description = "anyMic desktop server application"
license = "MIT"

[[bin]]
name = "anymic-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anymic-tauri = { path = "../crates/anymic-tauri" }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSProcessInfo", "NSString"] }
