[package]
name = "anymic-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anymic-core = { path = "../anymic-core" }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
hostname = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
anymic-audio-mac = { path = "../anymic-audio-mac" }

[target.'cfg(target_os = "windows")'.dependencies]
anymic-audio-win = { path = "../anymic-audio-win" }
